--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StarsLab 登录</title>
+  <title>今日的神秘小选择</title>
   <style>
     :root {
-      --bg-gradient-start: #d6a6f2;
-      --bg-gradient-end: #7dd1f3;
-      --card-shadow: 0 10px 25px rgba(93, 93, 93, 0.18);
-      --purple: #643896;
-      --pink: #db7ab7;
-      --text: #7d8fb3;
-      --light: #f6f7fb;
+      --bg: radial-gradient(circle at 20% 20%, rgba(255, 209, 220, 0.5), transparent 35%),
+        radial-gradient(circle at 80% 30%, rgba(187, 222, 251, 0.45), transparent 35%),
+        radial-gradient(circle at 50% 80%, rgba(255, 224, 178, 0.4), transparent 38%),
+        #ffeef6;
+      --primary: #ff6fa3;
+      --secondary: #9c6bff;
+      --card-bg: #ffffff;
+      --text: #4a4458;
+      --muted: #8a8297;
+      --shadow: 0 18px 40px rgba(255, 111, 163, 0.2);
     }
 
     * {
@@ -25,142 +28,414 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: "Microsoft YaHei", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: linear-gradient(135deg, var(--bg-gradient-start), var(--bg-gradient-end));
+      font-family: "PingFang SC", "Microsoft YaHei", system-ui, -apple-system, sans-serif;
+      color: var(--text);
+      background: var(--bg);
+      padding: 32px 16px;
+    }
+
+    .scene {
+      width: min(1100px, 96vw);
+      background: rgba(255, 255, 255, 0.75);
+      border-radius: 26px;
+      padding: 28px 26px 32px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.08);
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(255, 255, 255, 0.55);
+    }
+
+    .title {
+      text-align: center;
+      margin: 0 0 10px;
+      font-size: 30px;
+      letter-spacing: 1px;
+      color: #2c1c38;
+    }
+
+    .hint {
+      text-align: center;
+      margin: 0 0 22px;
+      color: var(--muted);
+      font-size: 15px;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+      gap: 18px;
+    }
+
+    .card-wrapper {
+      perspective: 1200px;
+    }
+
+    .love-card {
+      position: relative;
+      width: 100%;
+      padding-top: 60%;
+      cursor: pointer;
+      transform-style: preserve-3d;
+      transition: transform 0.28s ease, filter 0.25s ease;
+      border-radius: 18px;
+      box-shadow: var(--shadow);
+    }
+
+    .love-card:hover {
+      transform: scale(1.04);
+      filter: saturate(1.03);
+    }
+
+    .love-card.flipped {
+      transform: rotateY(180deg) scale(1.02);
+      cursor: default;
+    }
+
+    .face {
+      position: absolute;
+      inset: 0;
+      border-radius: 18px;
+      backface-visibility: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 22px;
+      text-align: center;
+    }
+
+    .front {
+      background: linear-gradient(145deg, rgba(255, 255, 255, 0.9), rgba(255, 239, 245, 0.85));
+      border: 1px dashed rgba(255, 111, 163, 0.4);
       color: var(--text);
     }
 
-    .card {
-      background: #fff;
-      width: 420px;
-      max-width: 90vw;
-      padding: 36px 32px 28px;
-      border-radius: 18px;
-      box-shadow: var(--card-shadow);
-      text-align: center;
-    }
-
-    .brand {
-      font-size: 28px;
-      font-weight: 700;
-      color: #111827;
-      margin: 0;
-    }
-
-    .subtitle {
-      margin: 4px 0 12px;
-      font-size: 14px;
-      color: #a6b1c2;
-    }
-
-    .divider {
-      display: inline-block;
-      width: 64%;
-      height: 1px;
-      background: linear-gradient(90deg, transparent, #e5e7eb, transparent);
-    }
-
-    .welcome {
-      margin: 14px 0;
-      font-size: 18px;
-      color: var(--pink);
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      text-align: left;
-    }
-
-    label {
-      font-size: 14px;
-      color: var(--purple);
-      margin-bottom: 6px;
-      display: inline-block;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px 14px;
-      border-radius: 10px;
-      border: 2px solid #eceef5;
-      font-size: 15px;
-      transition: border-color 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #c89fe8;
-      box-shadow: 0 0 0 3px rgba(200, 159, 232, 0.25);
-    }
-
-    .btn-primary {
-      width: 100%;
-      margin-top: 6px;
-      padding: 12px 16px;
-      background: linear-gradient(90deg, #f77bbf, #ac60d6);
-      border: none;
+    .back {
+      background: linear-gradient(135deg, #ff9fc6, #d6b5ff);
       color: #fff;
-      font-size: 15px;
+      transform: rotateY(180deg);
+    }
+
+    .tag {
+      font-size: 14px;
+      color: var(--secondary);
+      margin-bottom: 8px;
+      letter-spacing: 1px;
+    }
+
+    .front h3 {
+      margin: 8px 0 6px;
+      font-size: 20px;
+    }
+
+    .front p {
+      margin: 0;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .heart {
+      font-size: 28px;
+      margin-bottom: 6px;
+    }
+
+    .back h2 {
+      margin: 6px 0 8px;
+      font-size: 28px;
+      letter-spacing: 2px;
+    }
+
+    .back p {
+      margin: 0;
+      font-size: 16px;
+    }
+
+    .locked-mask {
+      position: absolute;
+      inset: 0;
+      border-radius: 18px;
+      background: rgba(255, 255, 255, 0.55);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      color: var(--muted);
       font-weight: 600;
-      border-radius: 10px;
+      letter-spacing: 1px;
+      backdrop-filter: blur(2px);
+    }
+
+    .card-wrapper.locked .locked-mask {
+      display: flex;
+    }
+
+    .card-wrapper.locked .love-card,
+    .card-wrapper.chosen .love-card {
+      pointer-events: none;
+    }
+
+    .modal {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      z-index: 10;
+    }
+
+    .modal.open {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .modal__backdrop {
+      position: absolute;
+      inset: 0;
+      background: rgba(25, 15, 46, 0.25);
+      backdrop-filter: blur(3px);
+    }
+
+    .modal__dialog {
+      position: relative;
+      background: #fff;
+      padding: 22px 24px 18px;
+      border-radius: 16px;
+      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.15);
+      width: min(360px, 90vw);
+      z-index: 1;
+    }
+
+    .modal__title {
+      margin: 0 0 8px;
+      font-size: 18px;
+      color: #2c1c38;
+    }
+
+    .modal__body {
+      margin: 0 0 16px;
+      color: var(--muted);
+      line-height: 1.5;
+    }
+
+    .modal__actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+    }
+
+    .modal__btn {
+      border: none;
+      border-radius: 999px;
+      padding: 10px 16px;
+      font-size: 14px;
       cursor: pointer;
-      transition: transform 0.1s ease, box-shadow 0.2s ease;
-      box-shadow: 0 8px 15px rgba(173, 96, 214, 0.25);
+      transition: transform 0.15s ease, box-shadow 0.2s ease;
     }
 
-    .btn-primary:active {
-      transform: translateY(1px);
+    .modal__btn:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
     }
 
-    .footer {
-      margin-top: 12px;
-      font-size: 13px;
-      color: #a8b3c8;
-      text-align: center;
+    .modal__btn--cancel {
+      background: #f3f0f8;
+      color: var(--text);
     }
 
-    @media (max-width: 480px) {
-      body {
-        padding: 20px;
-      }
+    .modal__btn--confirm {
+      background: linear-gradient(120deg, var(--primary), var(--secondary));
+      color: #fff;
+    }
 
-      .card {
-        width: 100%;
-        padding: 32px 24px;
-      }
-
-      .brand {
+    @media (max-width: 640px) {
+      .title {
         font-size: 24px;
       }
 
-      .welcome {
-        font-size: 16px;
+      .hint {
+        font-size: 14px;
+      }
+
+      .love-card {
+        padding-top: 70%;
       }
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1 class="brand">StarsLab</h1>
-    <p class="subtitle">探索充满创意的应用体验</p>
-    <div class="divider" aria-hidden="true"></div>
-    <div class="welcome">~欢迎登录~</div>
+  <div class="scene">
+    <h1 class="title">今日的神秘小选择</h1>
+    <p class="hint" id="hint">随便挑一张翻开，看看会发生什么</p>
 
-    <form>
-      <div>
-        <label for="username">账号</label>
-        <input id="username" name="username" type="text" placeholder="请输入您的账号" required />
+    <div class="cards" id="cards">
+      <div class="card-wrapper" data-default="翻开看看" data-hover="真的不选我吗？">
+        <div class="love-card" tabindex="0">
+          <div class="face front">
+            <div class="tag">Pick Me</div>
+            <div class="heart">❤️</div>
+            <h3 class="title-text">翻开看看</h3>
+            <p>也许里面藏着一句话</p>
+          </div>
+          <div class="face back">
+            <div class="heart">💌</div>
+            <h2>我喜欢你</h2>
+            <p>选了就不许反悔哦！</p>
+          </div>
+        </div>
+        <div class="locked-mask">已锁定</div>
       </div>
-      <div>
-        <label for="password">密码</label>
-        <input id="password" name="password" type="password" placeholder="请输入密码" required />
-      </div>
-      <button class="btn-primary" type="submit">登录</button>
-    </form>
 
-    <div class="footer">© 2025 StarsLab.io</div>
+      <div class="card-wrapper" data-default="偷偷藏着" data-hover="真的不选我吗？">
+        <div class="love-card" tabindex="0">
+          <div class="face front">
+            <div class="tag">Pick Me</div>
+            <div class="heart">🩷</div>
+            <h3 class="title-text">偷偷藏着</h3>
+            <p>要不要打开看看呢</p>
+          </div>
+          <div class="face back">
+            <div class="heart">💕</div>
+            <h2>我喜欢你</h2>
+            <p>心意确认，无法撤回！</p>
+          </div>
+        </div>
+        <div class="locked-mask">已锁定</div>
+      </div>
+
+      <div class="card-wrapper" data-default="等你揭晓" data-hover="真的不选我吗？">
+        <div class="love-card" tabindex="0">
+          <div class="face front">
+            <div class="tag">Pick Me</div>
+            <div class="heart">💗</div>
+            <h3 class="title-text">等你揭晓</h3>
+            <p>这一张也很特别哦</p>
+          </div>
+          <div class="face back">
+            <div class="heart">✨</div>
+            <h2>我喜欢你</h2>
+            <p>命中注定，锁死选择。</p>
+          </div>
+        </div>
+        <div class="locked-mask">已锁定</div>
+      </div>
+    </div>
   </div>
+
+  <div class="modal" id="modal" hidden>
+    <div class="modal__backdrop"></div>
+    <div class="modal__dialog" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+      <h3 class="modal__title" id="modal-title">确认选择这张卡吗？</h3>
+      <p class="modal__body">揭晓后就无法更改了。</p>
+      <div class="modal__actions">
+        <button class="modal__btn modal__btn--cancel" id="cancel-btn">再想想</button>
+        <button class="modal__btn modal__btn--confirm" id="confirm-btn">揭晓</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const hint = document.getElementById("hint");
+    const wrappers = Array.from(document.querySelectorAll(".card-wrapper"));
+    const modal = document.getElementById("modal");
+    const confirmBtn = document.getElementById("confirm-btn");
+    const cancelBtn = document.getElementById("cancel-btn");
+    let chosenWrapper = null;
+    let pendingWrapper = null;
+
+    function updateTextOnHover(activeWrapper) {
+      wrappers.forEach((wrapper) => {
+        const titleEl = wrapper.querySelector(".title-text");
+        const defaultText = wrapper.dataset.default;
+        if (wrapper !== activeWrapper) {
+          titleEl.textContent = wrapper.dataset.hover;
+        } else {
+          titleEl.textContent = defaultText;
+        }
+      });
+    }
+
+    function resetHoverText() {
+      wrappers.forEach((wrapper) => {
+        const titleEl = wrapper.querySelector(".title-text");
+        titleEl.textContent = wrapper.dataset.default;
+      });
+    }
+
+    function openModal(wrapper) {
+      pendingWrapper = wrapper;
+      modal.hidden = false;
+      requestAnimationFrame(() => modal.classList.add("open"));
+    }
+
+    function closeModal() {
+      modal.classList.remove("open");
+      modal.addEventListener(
+        "transitionend",
+        () => {
+          modal.hidden = true;
+        },
+        { once: true }
+      );
+      pendingWrapper = null;
+    }
+
+    wrappers.forEach((wrapper) => {
+      const card = wrapper.querySelector(".love-card");
+
+      card.addEventListener("mouseenter", () => {
+        if (chosenWrapper) return;
+        updateTextOnHover(wrapper);
+        hint.textContent = "别让剩下的两张伤心呀~";
+      });
+
+      card.addEventListener("mouseleave", () => {
+        if (chosenWrapper) return;
+        resetHoverText();
+        hint.textContent = "随便挑一张翻开，看看会发生什么";
+      });
+
+      card.addEventListener("click", () => {
+        if (chosenWrapper && chosenWrapper !== wrapper) {
+          hint.textContent = "已经选过啦，无法更改～";
+          return;
+        }
+
+        if (!chosenWrapper) {
+          openModal(wrapper);
+        }
+      });
+    });
+
+    cancelBtn.addEventListener("click", () => {
+      hint.textContent = "再想想，慢慢挑。";
+      closeModal();
+      resetHoverText();
+    });
+
+    confirmBtn.addEventListener("click", () => {
+      if (!pendingWrapper || chosenWrapper) return;
+      const card = pendingWrapper.querySelector(".love-card");
+      chosenWrapper = pendingWrapper;
+      hint.textContent = "秘密揭晓啦。";
+      wrappers.forEach((item) => {
+        if (item !== chosenWrapper) {
+          item.classList.add("locked");
+        } else {
+          item.classList.add("chosen");
+        }
+      });
+      card.classList.add("flipped");
+      closeModal();
+    });
+
+    modal.addEventListener("click", (event) => {
+      if (event.target.classList.contains("modal__backdrop")) {
+        closeModal();
+        resetHoverText();
+        hint.textContent = "随便挑一张翻开，看看会发生什么";
+      }
+    });
+  </script>
 </body>
 </html>
